--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>dap — Data Access Pages</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<link href="/styles.css" rel="stylesheet" type="text/css"/>
+		<link href="styles.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<table>
