--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Dap.js</title>
 	<style>
 	body{max-width: 80em; margin:2em auto; font-family:sans-serif; }
+	pre{padding:2em; background-color:lavender;}
 	</style>
 </head>
 <body>
@@ -20,28 +21,29 @@ Reactivity is the base concept of dap. No need to manually track changes in your
 
 
 <pre>
-'sample'.d("$choice="
-	,'selected'.d("! title ($choice not-yet)?")
-	,'UL.options'.d("* option"
-		'LI'.d("! .option").ui("$choice=.option")
+'sample'.d("$choice="	// make a {DIV class="sample"} element, and in its scope define a $choice status variable 
+	,'B.selected'.d("! title ($choice not-yet)?")	// print a message with $choice, mixed with some text from dictionary
+	,'UL.options'.d("* fruit"	// make UL element, and for each row in fruit dataset, repeat:
+		'LI'	.d("! .fruit")	//  make LI element, show fruit value for given row, and
+			.ui("$choice=.fruit") // on UI event (click by default) update the $choice status variable
 	)
 )
 .DEF({
-	title:"My favorite fruit is ",
-	options:["apple","orange","tomato","banana"]
-	"not-yet":"what?",
+	fruit:["apple","orange","tomato","banana"], // rowset data is a usual array
+	title:"My favorite fruit is ",	// messages are defined here, in dictionary - not inside the rules
+	"not-yet":"what?"	// hyphens and other symbols are okay for entry names, as long as they are quoted
 })
 </pre>
 
 
 <h3>Clear, concise and observable</h3>
-<p>Dap syntax is designed to focus on data and logic, instead of syntactic decoration. Dap application may be times smaller than similar pre in other reactive environments. You can well observe your pre without digging through sparse lines of curly brackets and boilerplate pre.</p>
+<p>Dap syntax is designed to focus on data and logic, instead of syntactic decoration. Dap application may be times smaller than similar code in other reactive environments. You can well observe your code without digging through sparse lines of curly brackets and boilerplate code.</p>
 <pre>
 'H1'.d("! `Hello,world!")
 </pre>
 
 <h3>Simple to start, easy to advance</h3>
-<p>Whole a lot of magic can be done with the few "stantard" dap operations. But when it's time to go beyond — you can easily import 3rd party extensions or expand dap with your own custom operations.</p>
+<p>A whole lot of magic can be done with the few "stantard" dap operations. But when it's time to go beyond — you can easily import 3-rd party extensions or expand dap with your own custom operations.</p>
 
 
 <h3>Fast and lightweight</h3>
@@ -57,8 +59,8 @@ Flexible and expandable
 <!--
 <p>Dap is a narrowly specific framework for massively interactive and data-driven web-applications ("D.A.P." was initially an acronym for "Data Access Pages"), so it competes to some fra</p>
 -->
-<p>Here are a few simple examples of how easily data/even-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React.js, Angular, etc. so if you're familiar with any of those, you can compare the ideas and approaches behind dap and other frameworks.</p>
-<p>Important notice: dap does not imply any specific directory structure organization for your application. Simple web-applications can easily consist of a single, static HTML file, maybe accompanied with a CSS stylesheet or other usual stuff, plus any related data sources.</p>
+<p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React.js, Angular, etc. so if you're familiar with any of those, you can compare the ideas and approaches behind dap and other frameworks.</p>
+<p>Important notice: unlike some other frameworks, dap does not imply any specific directory structure organization for your application. Simple web-applications can easily consist of a single, static HTML file, maybe accompanied with a CSS stylesheet or other usual stuff, plus any related data sources. For more complex projects, organization is up to the developer.</p>
 <p>The examples below are exactly the simplest dap applications, and completely fit into a single HTML file.</p>
 
 <h3>Tic Tac Toe</h3>
