--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Dap.js</title>
 	<style>
-	body{max-width: 80em; margin:2em auto; font-family:sans-serif; }
+	body{max-width: 80em; margin:2em auto; padding:1em; font-family:sans-serif; }
 	pre{padding:2em; background-color:lavender;}
+		h3{margin-top:2em;}
 	</style>
 </head>
 <body>
 
-<h1>Dap.js: Declarative script for massively interactive web-applications.</h1>
+<h1>Dap.js: for massively interactive web-applications</h1>
+<p>Dap (initially stood for "data access page") is a lightweight javascript framework for interactive data-driven web applications.</p>
 
 <a name="why-dap"/>
 <h2>Why dap?</h2>
+
+<h3>Clear, concise and observable</h3>
+<p>Dap is designed to focus on data and logic, instead of syntactic decoration. Dap code tends to be times smaller than equivalent solutions in other reactive environments. Dap code is clean and observable, without sparse lines of curly brackets and boilerplate code.</p>
+<pre>
+'H1'.d("! `Hello,world!")
+</pre>
 
 <h3>Natively reactive</h3>
 <p>
 Reactivity is the base concept of dap. No need to manually track changes in your application's status, or even bother to bind update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements interactively, based on their dap-rules.
 </p>
-
 
 <pre>
 'sample'.d("$choice="	// make a {DIV class="sample"} element, and in its scope define a $choice status variable 
@@ -35,38 +42,20 @@ Reactivity is the base concept of dap. No need to manually track changes in your
 })
 </pre>
 
-
-<h3>Clear, concise and observable</h3>
-<p>Dap syntax is designed to focus on data and logic, instead of syntactic decoration. Dap application may be times smaller than similar code in other reactive environments. You can well observe your code without digging through sparse lines of curly brackets and boilerplate code.</p>
-<pre>
-'H1'.d("! `Hello,world!")
-</pre>
-
+<h3>Fast and lightweight</h3>
+<p>Dap will not introduce any noticeable latency to your Web UI. The dap support script weighs less than 20kiB, dap-rules are parsed lazily, DOM manipulations are precise and deterministic, and only involve affected elements.</p>
+	
 <h3>Simple to start, easy to advance</h3>
 <p>A whole lot of magic can be done with the few "stantard" dap operations. But when it's time to go beyond — you can easily import 3-rd party extensions or expand dap with your own custom operations.</p>
 
-
-<h3>Fast and lightweight</h3>
-<p>Dap will not introduce any noticeable latency to your Web UI. The dap support script weighs less than 20kiB, dap-rules are parsed lazily, DOM manipulations are precise and deterministic, and only involve affected elements.</p>
-
-Flexible and expandable
-
-<pre>
-
-</pre>
-
 <h2>Code examples</h2>
-<!--
-<p>Dap is a narrowly specific framework for massively interactive and data-driven web-applications ("D.A.P." was initially an acronym for "Data Access Pages"), so it competes to some fra</p>
--->
 <p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React.js, Angular, etc. so if you're familiar with any of those, you can compare the ideas and approaches behind dap and other frameworks.</p>
 <p>Important notice: unlike some other frameworks, dap does not imply any specific directory structure organization for your application. Simple web-applications can easily consist of a single, static HTML file, maybe accompanied with a CSS stylesheet or other usual stuff, plus any related data sources. For more complex projects, organization is up to the developer.</p>
 <p>The examples below are exactly the simplest dap applications, and completely fit into a single HTML file.</p>
 
-<h3>Tic Tac Toe</h3>
-<p>This example is inspired by the <a href="https://reactjs.org/tutorial/tutorial.html" rel="nofollow">React.js tutorial</a></p>
-<pre>
-</pre>
+	<ul>
+	<li><a href="0.4.3/titactoe.html">Tic Tac Toe</a>. Example inspired by the <a href="https://reactjs.org/tutorial/tutorial.html" rel="nofollow">React.js tutorial</a></li>
+	</ul>
 
 
 </body>
