--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <h1>Dap.js: for massively interactive web-applications</h1>
 <p>Dap (initially stood for "data access page") is a lightweight javascript framework for interactive data-driven web applications.</p>
+<pre>
+'H1.welcome'.d("! `Hello,dap!")
+</pre>
 
 <a name="why-dap"/>
 <h2>Why dap?</h2>
 
 <h3>Clear, concise and observable</h3>
 <p>Dap is designed to focus on data and logic, instead of syntactic decoration. Dap code tends to be times smaller than equivalent solutions in other reactive environments. Dap code is clean and observable, without sparse lines of curly brackets and boilerplate code.</p>
-<pre>
-'H1'.d("! `Hello,world!")
-</pre>
 
 <h3>Natively reactive</h3>
 <p>
