--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Reactivity is the base concept of dap. No need to manually track changes in your
 	<h3></h3>
 	<p></p>
 <h2>Code examples</h2>
-<p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a link to <code>http://jooher.github.io/dap/0.4.3.js</code> script somewhere before dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
+<p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="http://jooher.github.io/dap/0.4.3.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
 
 <p>The example below shows a very basic pattern of selecting an option from a list.</p>
 <pre>
