--- a/0.4.3/samples/tictactoe.html
+++ b/0.4.3/samples/tictactoe.html
@@ -3,9 +3,9 @@
 <html>
 
 <head>
-	<title>tictactoe</title>
-	<!--script src="http://jooher.github.io/dap/0.4.3.js"></script-->
-	<script src="../../0.4.3-.js"></script>
+	<title>Tic Tac Toe - dap example</title>
+	<script src="http://jooher.github.io/dap/0.4.3.js"></script>
+	<!--script src="../../0.4.3-.js"></script-->
 	
 	<style>
 		body{font:normal 1em sans-serif}
