--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@ Reactivity is the base concept of dap. No need to manually track changes in your
 </pre>
 <p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="http://jooher.github.io/dap/0.4.3.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
 <p>From this example you can see DOM-element protos being denoted by single quoted strings (in a slightly shorter notation than used in HTML). Single quotes are just a matter of style, they help to tell protos from other strings and facilitate code highlighting.</p>
-Protos are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when some event bubbles <em>up</em> through the node towards the root. In the example above, the <code>LI</code>element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
+Protos are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when events bubble <em>up</em> through the node towards the root. In the example above, the <code>LI</code>element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
 <p>Rules in the example are very simple. You can see the three most common dap operators here:</p>
 <ul>
 	<li><code>!</code> - "print" operator, that simply prints its arguments into resulting node</li>
 	<li><code>*</code> - "multiple", or "for each", repeats the rest of the rule for each row in a dataset</li>
 	<li><code>?</code> - "if" gate, that allows further rule execution only if its argument is truish</li>
 </ul>
-<p>Arguments can be of several kinds:</p>
+<p>An you can see arguments of several kinds in the rules above:</p>
 <ul>
 	<li>Status variables (<code>$choice</code> above) prefixed with a <code>$</code></li>
 	<li>Data row entries (<code>.fruit</code> above) prefixed with a <code>.</code></li>
