--- a/0.4.3/samples/toh.html
+++ b/0.4.3/samples/toh.html
@@ -5,6 +5,7 @@
 <head>
 	<title>Tour of Heroes - dap example</title>
 	<script src="http://jooher.github.io/dap/0.4.3.js"></script>
+	<!--script src="../../0.4.3.js"></script-->
 	<link href="styles.css" rel="stylesheet" type="text/css"/>	
 	<link href="toh.css" rel="stylesheet" type="text/css"/>	
 </head>
