--- a/0.4.3/samples/helloforum.html
+++ b/0.4.3/samples/helloforum.html
@@ -30,7 +30,7 @@ const	grc={
 'helloforum'.d("! (.msg:# Entry@+ Ties@-)case")
 
 .DEF({
-	base	:'http://dapmx.org/samples/helloforum/helloforum.php?',
+	base	:'//dapmx.org/samples/helloforum/helloforum.php?',
 
 	Entry	:'msg'.d("$!!=; * (base@ `read.msg .msg)uri:query"
 			,'body'.d("! .body")
