--- a/0.4.3/samples/tictactoe.html
+++ b/0.4.3/samples/tictactoe.html
@@ -4,7 +4,8 @@
 
 <head>
 	<title>Tic Tac Toe - dap example</title>
-	<script src="http://jooher.github.io/dap/0.4.3.js"></script>	
+	<!--script src="http://jooher.github.io/dap/0.4.3.js"></script-->
+	<script src="../../0.4.3.js"></script>
 	<style>
 		body{font:normal 1em sans-serif}
 		.board,.history{ display:inline-block; width:10em; vertical-align:top; }
