--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Dap.js</title>
-	<style>
-	body{max-width: 80em; margin:2em auto; padding:1em; font:normal 1em sans-serif; }
-	h3{margin-top:2em;}
-	code{background:aliceblue; padding:2px}
-	
-	/* dapify styles */
-	pre{padding:2em; background-color:aliceblue;border:1px solid lavender; font: normal 1.2em/1.5 monospace;}
-	pre>i{color:cornflowerblue;}
-	pre>b{color:mediumblue}
-	pre>em{background:lavender; font-style:normal}
-	</style>
+	<link href="docs/styles.css" rel="stylesheet" type="text/css"/>	
 </head>
 <body>
 
@@ -87,7 +77,7 @@ Protos are rendered into actual DOM elements, from parent node <em>down</em> to 
 </ul>
 </body>
 
-<script src="dapify.js"></script>
+<script src="docs/dapify.js"></script>
 
 </html>
 
