--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ Reactivity is the base concept of dap. No need to manually track changes in your
 .INLINE() // render this dap into the current place of document
 </pre>
 <p>Dap code may seem a little bit unusual, but it is a pure Javascript, with slightly uncommon formatting to better reflex dap program structure. All you need to run dap in an .html document is a <code>&lt;script src="http://jooher.github.io/dap/0.4.3.js"&gt;&lt;/script&gt;</code> somewhere before actual dap code (usually, in the <code>head</code> section).<!--You are also welcome to play with the code right here, the code examples are editable.--></p>
-<p>From this example you can see DOM-element protos being denoted by single quoted strings (in a slightly shorter notation than used in HTML). Single quotes are just a matter of style, they help to tell protos from other strings and facilitate code highlighting.</p>
-Protos are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when events bubble <em>up</em> through the node towards the root. In the example above, the <code>LI</code>element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
+<p>From this example you can see DOM-element templates being denoted by single quoted strings (in a slightly shorter notation than used in HTML). Single quotes are just a matter of style, they help to tell protos from other strings and facilitate code highlighting.</p>
+Templates are rendered into actual DOM elements, from parent node <em>down</em> to child elements, according to their d-rules ("down"-phase rules) specified by <code>.d()</code> method. Some protos have u-rules for "up"-phase, when events bubble <em>up</em> through the node towards the root. In the example above, the <code>LI</code>element is given its u-rule by means of <code>.ui()</code> method, which also binds a default UI event (usually, click) listener.</p>
 <p>Rules in the example are very simple. You can see the three most common dap operators here:</p>
 <ul>
 	<li><code>!</code> - "print" operator, that simply prints its arguments into resulting node</li>
@@ -66,7 +66,7 @@ Protos are rendered into actual DOM elements, from parent node <em>down</em> to 
 	<li>Constants (<code>title</code>,<code>not-yet</code> and <code>nothing</code> above) are not prefixed</li>
 	<li>Expressions (like <code>($choice not-yet)?</code> above), you can tell them by brackets</li>
 </ul>
-<p>So far, quite simple, isn't it? To dive deeper, please see the tutorial and specs.</p>
+<p>So far, quite simple, isn't it? To dive deeper, go further with <a href="docs/">Understanding dap</a>.</p>
 
 <h3>Dap and other reactive frameworks</h3>
 <p>Unlike some other frameworks, dap does not imply any specific directory structure for your application. Simple web-applications can easily consist of a single, static HTML file, maybe accompanied with a CSS stylesheet or other usual stuff, plus any related data sources. For more complex projects, organization is up to the developer.</p>
@@ -78,6 +78,8 @@ Protos are rendered into actual DOM elements, from parent node <em>down</em> to 
 </body>
 
 <script src="docs/dapify.js"></script>
+
+<p>Coming soon: writing areal-world dap application</p>
 
 </html>
 
