--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 	<li><code>*</code> - "multiple", or "for each", repeats the rest of the rule for each row in a dataset</li>
 	<li><code>?</code> - "if" gate, that allows further rule execution only if its argument is truish</li>
 </ul>
-<p>An you can see arguments of several kinds in the rules above:</p>
+<p>And you can see arguments of several kinds in the rules above:</p>
 <ul>
 	<li>Status variables (<code>$choice</code> above) prefixed with a <code>$</code></li>
 	<li>Data row entries (<code>.fruit</code> above) prefixed with a <code>.</code></li>
@@ -75,11 +75,13 @@ Templates are rendered into actual DOM elements, from parent node <em>down</em> 
 	<li><a href="0.4.3/samples/titactoe.html">Tic Tac Toe</a>. Inspired by the <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
 	<li><a href="0.4.3/samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
 </ul>
+
+<p>Coming soon: writing a real-world dap application</p>
+
 </body>
 
 <script src="docs/dapify.js"></script>
 
-<p>Coming soon: writing a real-world dap application</p>
 
 </html>
 
