--- a/0.4.3/samples/usetest.html
+++ b/0.4.3/samples/usetest.html
@@ -5,14 +5,11 @@
 <body>
 
 <script>
-'UL.heroes'.d("! (heroes `io)?"//! `Heroes"//"* uri:query
-	,'LI.hero'.d("! `.name;")// !! .id@title
+'UL.heroes'.d("! heroes:sample.upper")
 )
 
 .DEF({
-
 	heroes:"heroes.json"
-
 })
 
 .USE({
