--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>Dap.js: for massively interactive web-applications</h1>
 <p>Dap (initially stood for "data access page") is a lightweight javascript framework for interactive data-driven web applications.</p>
+<p>Unlike many other reactive frameworks that build reactivity in terms of Javascript, dap defines dependencies between elements on a higher level of abstraction — by means of declarative rules written in a dedicated "superscript" language. These rules can be extremely compact, efficient and human-readable at the same time; they are lazily parsed, precompiled and executed by the dap runtime script (less than 9kiB gzip), and do not require any other code preparation steps.</p>
 <pre>
 'H1.welcome'.d("! `Hello,world!") // Create an &lt;H1 class="welcome"&gt; element and print "Hello,world!" text into it
 </pre>
