--- a/0.4.3/samples/fruit.html
+++ b/0.4.3/samples/fruit.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Favorite fruit - dap sample</title>
-	<script src="http://jooher.github.io/dap/0.4.3.js"></script>
+	<script src="../-.js"></script>
 	<link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
 
@@ -13,7 +13,8 @@
 		,'LI'	.d("! .fruit") // each LI element shows fruit value for its data row, and
 			.ui("$choice=.fruit") // on UI event (click by default) will update $choice with the fruit from its data
 	)
-)
+	, document.createElement("HR"),21*2," - HTML And flat values mix-in"
+)	
 .DEF({ // strings and other constants are supposed to be defined here, not inside the rules
 	title:"My favorite fruit is ", // textual messages gathered in one place are easier to maintain and localize if needed
 	"not-yet":"what?", // hyphens and other symbols are okay for entry names, as long as they are quoted
