--- a/0.4.3/samples/test.html
+++ b/0.4.3/samples/test.html
@@ -5,9 +5,7 @@
 <body>
 
 <script>
-'UL.heroes'.d("! (heroes `io)?"//! `Heroes"//"* uri:query
-	,'LI.hero'.d("! `.name;")// !! .id@title
-)
+'test'.d("! (`io heroes)uri:sample.upper")
 
 .DEF({
 
@@ -16,12 +14,30 @@
 })
 
 .USE({
-	sample	: "https://dap.js.org/google.js",
+	sample	: "sample-ns.js",
 })
 
 .INLINE();
 
 </script>
+
+<pre id="sample-ns.js">
+dap.NS("sample.js")
+
+.EXT({
+	convert	:{
+		upper	:str=>str.toUpperCase(),
+		lower	:str=>str.toLowerCase()
+	},
+	flatten	:{
+		here	: (values,tags)=>tags.reduce((str,tag,i)=>str.split('{'+tag+'}').join(values[i]),values.pop())
+	}
+})
+
+.DEF({
+	linebreak: document.createElement('HR')
+})
+</pre>
 
 </body>
 </html>
