--- a/0.4.3/samples/fruit.html
+++ b/0.4.3/samples/fruit.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Favorite fruit - dap sample</title>
-	<script src="../-.js"></script>
+	<script src="../--.js"></script>
 	<link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
 
@@ -15,7 +15,7 @@
 	)
 	, document.createElement("HR"),21*2," - HTML And flat values mix-in"
 )	
-.DEF({ // strings and other constants are supposed to be defined here, not inside the rules
+.DICT({ // strings and other constants are supposed to be defined here, not inside the rules
 	title:"My favorite fruit is ", // textual messages gathered in one place are easier to maintain and localize if needed
 	"not-yet":"what?", // hyphens and other symbols are okay for entry names, as long as they are quoted
 	fruit:["apple","orange","tomato","banana"] // datasets data may be ordinary arrays containing any kind of data
